removefirst, drawfirst